# lyrebird-agent

./: .gitignore  CLAUDE.md  README.md  arch.md  pyproject.toml  resume.redacted.md
docs/screenshots/: README.md
memo/: 00-overview.md  01-deepseek-via-anthropic.md  02-skeletal-build-order.md  03-agent-design-choices.md  04-real-run-walkthrough.md  05-lessons-and-traps.md  06-runbook.md  07-web-observability-arch.md  08-sse-design-and-traps.md  09-design-token-mapping.md  10-observability-runbook.md  11-v4-and-i18n.md  12-model-selection.md  13-transparent-logo-pipeline.md
scripts/: make_transparent_logo.py
skills/evidence-schema/: SKILL.md
skills/incident-probing/: SKILL.md
skills/mechanism-taxonomy/: SKILL.md
skills/orchestration-playbook/: SKILL.md
skills/report-authoring/: SKILL.md
skills/skeptic-checklist/: SKILL.md
src/lyrebird/: __init__.py  artifact_store.py  main.py  observability.py  schemas.py  skills.py
src/lyrebird/agents/: base.py  evidence_mapper.py  intake.py  interviewer.py  mechanism_modeler.py  orchestrator.py  report_composer.py  simulated_candidate.py  skeptic.py
src/lyrebird/i18n/: __init__.py  loader.py
src/lyrebird/llm/: client.py
src/lyrebird/validators/: citation_checker.py  confidence_scorer.py  pii_guard.py
src/lyrebird/web/: app.py  (+1 more)
tests/: test_agent_events.py  test_agents_offline.py  test_artifact_store.py  test_event_bus.py  test_i18n.py  test_llm_client.py  test_orchestrator_logic.py  test_pipeline_e2e.py  test_schemas.py  test_skills.py  test_smoke.py  test_validators.py  test_web_api.py  test_web_i18n.py
(+5 files in other folders)
