[project]
name = "lyrebird-agent"
version = "0.1.0"
description = "Multi-Agent cognitive mechanism extraction system, per arch.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "jsonschema>=4.20",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
